Fix image alignment by resetting left margin to zero

--- a/medium1.css
+++ b/medium1.css
@@ -134,7 +134,7 @@ img{
     align-self:start;
     margin-top: 0px;
     font-size: 500px;
-    margin-left: 420px;
+    margin-left: 0px;
 }
 .group3{
     display: flex;
